disaster-recovery/terraform/modules/security/main.tf
# ALB Security Group
resource "aws_security_group" "alb" {
  # name_prefix = "${var.project_name}-alb"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, {
    Name = "${var.project_name}-alb-sg"
  })
}

# ECS Security Group
resource "aws_security_group" "ecs" {
  # name_prefix = "${var.project_name}-ecs"
  vpc_id      = var.vpc_id

  ingress {
    description     = "HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, {
    Name = "${var.project_name}-ecs-sg"
  })
}

# Import existing DR RDS Security Group
resource "aws_security_group" "rds" {
  name        = "ecs-lamp-dr-rds-sg"
  description = "DR Security group for RDS MySQL"
  vpc_id      = var.vpc_id

  tags = merge(var.tags, {
    Name = "ecs-lamp-dr-rds-sg"
  })

  lifecycle {
    ignore_changes = [ingress, egress]
  }
}
